# rPPG-estimate-distance

./: NOTICE.md  README.md  analyse_video.py  bfm_468_indices.json  bfm_468_pointmap.json  demo_unidepth_faces.py  pyproject.toml  requirements.txt
FaceBoxes/: build_cpu_nms.sh
FaceBoxes/utils/: build.py  nms_wrapper.py
Sim3DR/: build_sim3dr.sh  setup.py
configs/: mb05_120x120.yml  mb1_120x120.yml  resnet_120x120.yml
utils/: fps_points.py  functions.py  region_motion.py
weights/: .gitignore
